--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -45,75 +45,49 @@
 }
 
 :root {
-  --radius: 0rem;
-  --background: oklch(0.95 0.05 70);
-  --foreground: oklch(0.1 0.01 70);
-  --card: oklch(0.9 0.03 70);
-  --card-foreground: oklch(0.2 0.01 70);
-  --popover: oklch(0.95 0.05 70);
-  --popover-foreground: oklch(0.1 0.01 70);
-  --primary: oklch(0.65 0.2 70);
-  --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.75 0.05 70);
-  --secondary-foreground: oklch(0.1 0 0);
-  --muted: oklch(0.85 0.03 60);
-  --muted-foreground: oklch(0.45 0.02 70);
-  --accent: oklch(0.8 0.04 60);
-  --accent-foreground: oklch(0.2 0.01 70);
-  --destructive: oklch(0.5 0.25 30);
-  --destructive-foreground: oklch(0.9 0.01 70);
-  --border: oklch(0.6 0.1 70);
-  --input: oklch(0.3 0.05 70);
-  --ring: oklch(0.65 0.2 70);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --background: hsl(32.1 100% 95%);
+  --foreground: hsl(32.1 5% 10%);
+  --card: hsl(32.1 50% 90%);
+  --card-foreground: hsl(32.1 5% 15%);
+  --popover: hsl(32.1 100% 95%);
+  --popover-foreground: hsl(32.1 100% 10%);
+  --primary: hsl(32.1 94.6% 43.7%);
+  --primary-foreground: hsl(0 0% 100%);
+  --secondary: hsl(32.1 30% 70%);
+  --secondary-foreground: hsl(0 0% 0%);
+  --muted: hsl(-5.899999999999999 30% 85%);
+  --muted-foreground: hsl(32.1 5% 35%);
+  --accent: hsl(-5.899999999999999 30% 80%);
+  --accent-foreground: hsl(32.1 5% 15%);
+  --destructive: hsl(0 100% 30%);
+  --destructive-foreground: hsl(32.1 5% 90%);
+  --border: hsl(32.1 30% 50%);
+  --input: hsl(32.1 30% 26%);
+  --ring: hsl(32.1 94.6% 43.7%);
+  --radius: 1rem;
 }
 
 .dark {
-  --background: oklch(0.15 0.03 70);
-  --foreground: oklch(0.9 0.01 70);
-  --card: oklch(0.1 0.02 70);
-  --card-foreground: oklch(0.9 0.01 70);
-  --popover: oklch(0.15 0.03 70);
-  --popover-foreground: oklch(0.9 0.01 70);
-  --primary: oklch(0.65 0.2 70);
-  --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.2 0.05 70);
-  --secondary-foreground: oklch(1 0 0);
-  --muted: oklch(0.25 0.03 60);
-  --muted-foreground: oklch(0.65 0.02 70);
-  --accent: oklch(0.25 0.04 60);
-  --accent-foreground: oklch(0.9 0.01 70);
-  --destructive: oklch(0.5 0.25 30);
-  --destructive-foreground: oklch(0.9 0.01 70);
-  --border: oklch(0.3 0.05 70);
-  --input: oklch(0.3 0.05 70);
-  --ring: oklch(0.65 0.2 70);
-  --radius: 0rem;
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --background: hsl(32.1 50% 10%);
+  --foreground: hsl(32.1 5% 90%);
+  --card: hsl(32.1 50% 10%);
+  --card-foreground: hsl(32.1 5% 90%);
+  --popover: hsl(32.1 50% 5%);
+  --popover-foreground: hsl(32.1 5% 90%);
+  --primary: hsl(32.1 94.6% 43.7%);
+  --primary-foreground: hsl(0 0% 100%);
+  --secondary: hsl(32.1 30% 20%);
+  --secondary-foreground: hsl(0 0% 100%);
+  --muted: hsl(-5.899999999999999 30% 25%);
+  --muted-foreground: hsl(32.1 5% 60%);
+  --accent: hsl(-5.899999999999999 30% 25%);
+  --accent-foreground: hsl(32.1 5% 90%);
+  --destructive: hsl(0 100% 30%);
+  --destructive-foreground: hsl(32.1 5% 90%);
+  --border: hsl(32.1 30% 26%);
+  --input: hsl(32.1 30% 26%);
+  --ring: hsl(32.1 94.6% 43.7%);
+  --radius: 1rem;
 }
 
 @layer base {
